package Memento;

public interface Memento {
    String getName();
    int getExpLevel();
    Location getLocation();
    String getWeaponName();
    WeaponType getWeaponType();

}
